Updated index.html with project links

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello, world!
+<html>
+  <head>
+    <title>Andrew Krepps's Projects</title>
+  </head>
+  <body>
+    <h1>Andrew Krepps's Projects</h1>
+    <a href="nonograms/index.html">Nonogram Solver (work in progress)</a>
+  </body>
+</html>
