--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <li>Icons provided by <a href="https://feathericons.com/" target="_blank" rel="noreferer noopener">Feather</a> (<a href="https://github.com/feathericons/feather/blob/master/LICENSE" target="_blank" rel="noreferer noopener">MIT License</a>)</li>
 </ul>
 <h2 id="smiling-quarter">Smiling Quarter</h2>
-<p>In 2021, I founded my own independent game development studio, <a href="https://smilingquarter.com" target="_blank" rel="noreferer noopener">Smiling Quarter</a>.</p>
+<p>In 2021 I founded my own independent game development studio, <a href="https://smilingquarter.com" target="_blank" rel="noreferer noopener">Smiling Quarter</a>.</p>
 <p>So far, it has published the following games:</p>
 <ul>
 <li><a href="https://smilingquarter.com/games#blunderbubb" target="_blank" rel="noreferer noopener">Blunderbubb!</a>
