Added game jams page and updated other content

--- a/index.html
+++ b/index.html
@@ -49,33 +49,33 @@
       <p>Welcome to my website! Below you will find information about different projects I have worked on.</p>
 <h2 id="personal-projects">Personal Projects</h2>
 <p>Here are a few personal projects I have worked on in my free time:</p>
-<h4 id="nonogram-solver">Nonogram Solver</h4>
 <ul>
-<li>Kotlin Multiplatform library for solving <a href="https://en.wikipedia.org/wiki/Nonogram" target="_blank" rel="noreferer noopener">nonogram puzzles</a></li>
+<li><a href="/nonogram-solver">Nonogram Solver</a>
+<ul>
+<li>Kotlin multiplatform library for solving <a href="https://en.wikipedia.org/wiki/Nonogram" target="_blank" rel="noreferer noopener">nonogram puzzles</a></li>
 <li>Basic Kotlin/JS web UI for running the solver</li>
-<li><a href="/nonogram-solver">Web UI</a></li>
 <li><a href="https://github.com/askrepps/nonograms" target="_blank" rel="noreferer noopener">GitHub Repository</a></li>
 </ul>
-<h4 id="advent-of-code">Advent of Code</h4>
+</li>
+<li><a href="/game-jams">Game Jams</a>
 <ul>
-<li>Participated in <a href="https://adventofcode.com/2020" target="_blank" rel="noreferer noopener">Advent of Code 2020</a>
-<ul>
-<li>Solutions implemented in Python 3</li>
-<li><a href="https://github.com/askrepps/advent-of-code-2020" target="_blank" rel="noreferer noopener">GitHub Repository</a></li>
+<li>Simple games built while facilitating and participating in weekend game jam events at Penn State University</li>
+<li>Built using <a href="https://slick.ninjacave.com/" target="_blank" rel="noreferer noopener">Slick2D</a> for Java</li>
 </ul>
 </li>
-<li>Participated in <a href="https://adventofcode.com/2021" target="_blank" rel="noreferer noopener">Advent of Code 2021</a>
+<li>Participated in <a href="https://adventofcode.com" target="_blank" rel="noreferer noopener">Advent of Code</a> 2020-2021
 <ul>
-<li>Solutions implemented in Kotlin</li>
-<li><a href="https://github.com/askrepps/advent-of-code-2021" target="_blank" rel="noreferer noopener">GitHub Repository</a></li>
+<li>2020 solutions implemented in Python 3 (<a href="https://github.com/askrepps/advent-of-code-2020" target="_blank" rel="noreferer noopener">GitHub Repository</a>)</li>
+<li>2021 solutions implemented in Kotlin (<a href="https://github.com/askrepps/advent-of-code-2021" target="_blank" rel="noreferer noopener">GitHub Repository</a>)</li>
 </ul>
 </li>
-</ul>
-<h4 id="this-website">This Website</h4>
+<li>This Website
 <ul>
 <li>Static website generated using <a href="https://gohugo.io/" target="_blank" rel="noreferer noopener">Hugo</a></li>
 <li>Customized theme based on the <a href="https://github.com/vaga/hugo-theme-m10c" target="_blank" rel="noreferer noopener">m10c theme</a> (<a href="https://github.com/vaga/hugo-theme-m10c/blob/master/LICENSE.md" target="_blank" rel="noreferer noopener">MIT License</a>)</li>
 <li>Icons provided by <a href="https://feathericons.com/" target="_blank" rel="noreferer noopener">Feather</a> (<a href="https://github.com/feathericons/feather/blob/master/LICENSE" target="_blank" rel="noreferer noopener">MIT License</a>)</li>
+</ul>
+</li>
 </ul>
 <h2 id="smiling-quarter">Smiling Quarter</h2>
 <p>In 2021 I founded my own independent game development studio, <a href="https://smilingquarter.com" target="_blank" rel="noreferer noopener">Smiling Quarter</a>.</p>
@@ -83,7 +83,7 @@
 <ul>
 <li><a href="https://smilingquarter.com/games#blunderbubb" target="_blank" rel="noreferer noopener">Blunderbubb!</a>
 <ul>
-<li>A Unity-based mobile game for iOS and Android</li>
+<li>A mobile game built using <a href="https://unity.com/" target="_blank" rel="noreferer noopener">Unity</a></li>
 </ul>
 </li>
 </ul>
