Update homepage content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
 <ul>
 <li><a href="https://smilingquarter.com/games#blunderbubb" target="_blank" rel="noreferer noopener">Blunderbubb!</a>
 <ul>
-<li>A mobile game built using <a href="https://unity.com/" target="_blank" rel="noreferer noopener">Unity</a></li>
+<li>A casual action mobile game built using <a href="https://unity.com/" target="_blank" rel="noreferer noopener">Unity</a></li>
+</ul>
+</li>
+<li><a href="https://smilingquarter.com/triathlon" target="_blank" rel="noreferer noopener">Puzzle Triathlon</a>
+<ul>
+<li>A browser game mashup of classic logic and word puzzles, built using <a href="https://reactjs.org/" target="_blank" rel="noreferer noopener">React</a></li>
 </ul>
 </li>
 </ul>
@@ -78,7 +83,7 @@
 <li>
 <p>Participated in <a href="https://adventofcode.com" target="_blank" rel="noreferer noopener">Advent of Code</a> 2020-2022</p>
 <ul>
-<li>2022 solutions (to be) implemented in Kotlin (<a href="https://github.com/askrepps/advent-of-code-2022" target="_blank" rel="noreferer noopener">GitHub Repository</a>)</li>
+<li>2022 solutions implemented in Kotlin (<a href="https://github.com/askrepps/advent-of-code-2022" target="_blank" rel="noreferer noopener">GitHub Repository</a>)</li>
 <li>2021 solutions implemented in Kotlin (<a href="https://github.com/askrepps/advent-of-code-2021" target="_blank" rel="noreferer noopener">GitHub Repository</a>)</li>
 <li>2020 solutions implemented in Python 3 (<a href="https://github.com/askrepps/advent-of-code-2020" target="_blank" rel="noreferer noopener">GitHub Repository</a>)</li>
 </ul>
