Update default word list

--- a/sub-anagrams/index.html
+++ b/sub-anagrams/index.html
@@ -35,7 +35,24 @@
     <p>Input</p>
     <input id="input-string" type="text">
     <p>Target Word List</p>
-    <textarea id="target-list" rows="5", cols="80"></textarea>
+    <textarea id="target-list" rows="20", cols="80">
+Bone
+Char
+Deer
+Earn
+Fame
+Gore
+Stun
+Toon
+Asura
+Beast
+Karoo
+Learn
+Match
+Shame
+Sonar
+Tiara
+    </textarea>
     <br/>
     <input type="button" value="Go" onclick="displaySubAnagrams('input-string', 'target-list', 'results')">
 
